# neural-net

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CPUTrainer.cpp  CPUTrainer.h  DataPoint.cpp  DataPoint.h  Logging.cpp  Logging.h  ML.cpp  ML.h  Network.cpp  Network.h  ThreadPool.cpp  ThreadPool.h  Timer.cpp  Timer.h  build.sh  dependecies.sh  shaders.bat  shaders.sh  util.cpp  util.h
gpu/: Buffer.cpp  Buffer.h  Context.cpp  Context.h  GPUNetwork.cpp  GPUNetwork.h  Pipeline.cpp  Pipeline.h  compute.cpp  compute.h
gpu/assets/: activate.glsl  clear.glsl  compute.glsl  deltas.glsl  reset.glsl  shared.glsl
networks/: mnist.cpp  mnist.h  test.cpp  test.h
test/: test.cpp
